src/index.css
@import url('https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@400;700&display=swap');
@tailwind base;
@tailwind components;
@tailwind utilities;

@layer components {
  .todo_container {
    @apply flex items-center justify-between px-6 py-4 bg-white dark:bg-ddesaturatedBlue text-ddesaturatedBlue
    dark:text-lgrayishBlue border-white shadow-inner dark:border-b-2 dark:border-slate-700 
  }
  .app {
    @apply bg-no-repeat dark:bg-veryDarkBlue bg-white dark:bg-mobileDarkTheme 
      dark:sm:bg-desktopDarkTheme bg-mobileLightTheme sm:bg-desktopLightTheme
  }
}


:root {
  font-family: 'Josefin Sans', sans-serif;
  line-height: 1.5;
  font-weight: 400;

  color-scheme: light dark;

  font-synthesis: none;
  text-rendering: optimizeLegibility;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  -webkit-text-size-adjust: 100%;
}

.light {
  background: #fefefe;
  color: hsl(235, 19%, 35%);
}

.checkmark {
  background-color: linear-gradient(hsl(192, 100%, 67%), hsl(280, 87%, 65%));
}

